--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetGroups">
-        <activity android:name=".view.SignUpActivity"></activity>
+        <activity android:name=".view.SignUpActivityTest"></activity>
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
@@ -20,5 +20,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
