--- a/MeetGroups/build.gradle
+++ b/MeetGroups/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.32"
+    ext.android_plugin_version = '2.2.0-alpha4'
     repositories {
         google()
         jcenter()
     }
     dependencies {
+        classpath "com.android.tools.build:gradle:$android_plugin_version"
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.5'
