--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetGroups">
         <activity
+            android:name=".EditProfileActivity"
+            android:label="@string/title_activity_edit_profile"></activity>
+        <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -19,4 +22,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
