--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetGroups">
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".view.EditProfileActivity"
             android:label="@string/title_activity_edit_profile"></activity>
         <activity
             android:name=".view.MainActivity"
