--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetGroups">
+        <activity android:name=".view.EditJournalActivity"></activity>
         <activity
             android:name=".view.EditProfileActivity"
-            android:label="@string/title_activity_edit_profile"></activity>
+            android:label="@string/title_activity_edit_profile" />
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
