--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity
             android:name=".view.EditProfileActivity"
             android:label="@string/title_activity_edit_profile"></activity>
-        <activity android:name=".view.SignUpActivity"/>
+        <activity
+            android:name=".view.SignUpActivity"
+            android:label="SignUpActivity"></activity>
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
