--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -28,10 +28,13 @@
 
         <activity
             android:name=".view.EditProfileActivity"
-            android:label="@string/title_activity_edit_profile"></activity>
+            android:label="@string/title_activity_edit_profile" />
         <activity
             android:name=".view.SignUpActivity"
-            android:label="SignUpActivity"></activity>
+            android:label="SignUpActivity" />
+        <activity
+            android:name=".view.SignInActivity"
+            android:label="SignInActivity" />
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
