--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -13,10 +13,15 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetGroups">
-        <activity android:name=".view.PostActivity"></activity>
+        <activity android:name=".view.launch.LaunchActivity" android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".view.PostActivity" />
         <activity android:name=".view.PostCreationActivity" />
-        <activity android:name=".view.ReadOnlyJournalActivity"></activity>
-        <activity android:name=".view.PostCreationActivity" />
+        <activity android:name=".view.ReadOnlyJournalActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,10 +36,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-        <activity
-            android:name=".view.EditProfileActivity"
-            android:label="@string/title_activity_edit_profile" />
         <activity
             android:name=".view.SignUpActivity"
             android:label="SignUpActivity" />
@@ -48,11 +49,6 @@
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
