--- a/MeetGroups/app/build.gradle
+++ b/MeetGroups/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation "androidx.cardview:cardview:1.0.0"
     kapt "com.android.databinding:compiler:$android_plugin_version"
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 kapt {
