--- a/MeetGroups/app/src/main/AndroidManifest.xml
+++ b/MeetGroups/app/src/main/AndroidManifest.xml
@@ -13,11 +13,15 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetGroups">
-        <activity android:name=".view.AddParticipantActivity"></activity>
+        <activity android:name=".view.ReadOnlyProfileActivity"></activity>
+        <activity android:name=".view.AddParticipantActivity" />
         <activity android:name=".view.PostActivity" />
-        <activity android:name=".view.launch.LaunchActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".view.launch.LaunchActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,6 +42,7 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
         <activity
             android:name=".view.SignUpActivity"
             android:label="SignUpActivity" />
@@ -50,8 +55,7 @@
             android:label="@string/title_activity_edit_profile" />
         <activity
             android:name=".view.MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
